--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: dart_auth
 description: A starting point for Dart libraries or applications.
 version: 1.0.1
-# repository: https://github.com/my_org/my_repo
+repository: https://github.com/yuen-quinn/dart_auth
 
 environment:
   sdk: ^3.10.7
